# PyPortfolioOpt

./: .gitignore  Makefile  README.md  REVERT_COMMIT.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json  setup-uv.sh
.github/: renovate.json
.github/actions/setup-project/: action.yml
.github/scripts/: book.sh
.github/workflows/: codecov.yml  main.yml  notebooks.yml  release.yml
_book/: index.html  links.json
cookbook/: 1-RiskReturnModels.ipynb  2-Mean-Variance-Optimisation.ipynb  3-Advanced-Mean-Variance-Optimisation.ipynb  4-Black-Litterman-Allocation.ipynb  5-Hierarchical-Risk-Parity.ipynb  download_prices.py
cookbook/data/: prices.csv  spy_prices.csv
pypfopt/: base_optimizer.py  black_litterman.py  cla.py  discrete_allocation.py  exceptions.py  expected_returns.py  hierarchical_portfolio.py  objective_functions.py  plotting.py  risk_models.py
pypfopt/efficient_frontier/: efficient_cdar.py  efficient_cvar.py  efficient_frontier.py  efficient_semivariance.py
tests/: test_discrete_allocation.py  utilities_for_tests.py
