[project]
name = "pypfopt"
version = "1.5.6"
description = "Financial portfolio optimization in python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Robert Andrew Martin", email = "martin.robertandrew@gmail.com" }
]
keywords = ["finance", "portfolio", "optimization", "quant", "investing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
]

# Core runtime dependencies
dependencies = [
    "plotly>=6.3.0",
    "matplotlib>=3.10.7",
    "scipy>=1.3",
    "pandas>=0.19",
    "cvxpy>=1.1.19",
    "numpy>=1.26.0",
    "scikit-learn>=1.7.2"
]

#[project.optional-dependencies]
## Preserve the Poetry extra named "optionals"
#optionals = [
#  "scikit-learn>=0.24.1",
#  "matplotlib>=3.2.0"
#]

[project.urls]
Repository = "https://github.com/pyportfolio/pyportfolioopt"
Documentation = "https://pyportfolioopt.readthedocs.io/en/latest/"
Issues = "https://github.com/pyportfolio/pyportfolioopt/issues"
"Personal website" = "https://reasonabledeviations.com"

# Build system configuration
# Hatchling is a modern, extensible Python build backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pypfopt"]

#[tool.black]
#line-length = 88

#[tool.isort]
#profile = "black"
# will all be controlled by ruff.toml

[project.optional-dependencies]
# Development-only dependencies (not included when installing the package)
dev = [
    "pytest>=7.1.2",
    #"flake8>=4.0.1",
    #"jupyterlab>=3.4.2",
    #"black>=22.3.0",
    #"ipykernel>=6.13.0",
    #"jedi>=0.18.1",
    "pytest-cov>=3.0.0",
    #"yfinance>=0.1.70",
    "ecos>=2.0.14",
    "pre-commit==4.3.0",
]

[tool.deptry.per_rule_ignores]
DEP001 = ["sklearn"]
DEP002 = ["scikit-learn"]

